<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_meeting_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/logo_meeting_add_activity"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_groups_24"
        app:tint="@color/toolbar" />

    <ImageButton
        android:id="@+id/imageButtonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:background="@null"
        android:tint="@color/toolbar_dark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <EditText
        android:id="@+id/subject_meeting_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/subject_meeting"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_meeting_add_activity" />

    <Spinner
        android:id="@+id/spinner_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:hint="Salle de réunion"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_meeting_add" />

    <MultiAutoCompleteTextView
        android:id="@+id/tv_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:completionThreshold="1"
        android:hint="Participants"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_room" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/timePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_participants" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:padding="16dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/datePicker"
        app:layout_constraintTop_toBottomOf="@+id/tv_participants" />

    <ImageButton
        android:id="@+id/add_meeting_button_create"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="@color/toolbar"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_round_add_box_24" />

</androidx.constraintlayout.widget.ConstraintLayout>