<resources>
    <string name="app_name">Ma Réu</string>
    <string name="content_description_filter">Filter description</string>
    <string name="filter">Filter</string>
    <string name="avatar_meeting">Avatar Meeting</string>
    <string name="delete_button">Delete Button</string>
    <string name="subject_meeting">Sujet du meeting</string>
    <string name="date_meeting">Meeting Date</string>
    <string name="localisation_meeting">Meeting Localisation</string>
    <string name="participants_meeting">Meeting Participants</string>
    <string name="localisation">Localisation</string>
    <string name="content_description_localisation"> Description localisation</string>
    <string name="content_description_date"> Description date</string>
    <string name="date"> Date</string>
    <string name="localisation_filter"> Localisation </string>
    <string name="date_filter"> Date </string>
    <string name="localisation_popup">Selectionner vos salles</string>
    <string name="date_popup">Selectionner votre horaire</string>
    <string name="tous_filter">Tout</string>
    <string name="add_meeting_button">Add meeting button</string>
</resources>