<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_meeting_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MeetingListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/filter_menu"
            app:title="@string/app_name"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_meeting_button"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/floating_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_random_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:fabSize="mini"
        android:visibility="gone"
        android:backgroundTint="@color/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/add_meeting"
        app:layout_constraintEnd_toEndOf="@+id/add_meeting"
        app:srcCompat="@drawable/ic_baseline_group_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:fabSize="mini"
        android:visibility="gone"
        android:backgroundTint="@color/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/add_random_meeting"
        app:layout_constraintEnd_toEndOf="@+id/add_random_meeting"
        app:srcCompat="@drawable/ic_baseline_create_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="10dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>