...
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/localisation_meeting"
                android:text="@string/localisation_meeting"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintRight_toLeftOf="@+id/item_list_delete_button"
                app:layout_constraintBottom_toTopOf="@id/participant_meeting"
                app:layout_constraintLeft_toRightOf="@id/divider2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/participant_meeting"
...
